--- a/src/main/resources/fxml/GameView.fxml
+++ b/src/main/resources/fxml/GameView.fxml
@@ -3,14 +3,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="57.0" prefWidth="772.0" spacing="20.0">
+      <HBox alignment="CENTER" layoutX="6.0" layoutY="14.0" prefHeight="58.0" prefWidth="1187.0" spacing="20.0">
          <children>
-            <Label fx:id="jugadorLabel" alignment="CENTER_RIGHT" prefWidth="300.0" text="Jugador">
+            <Label fx:id="jugador0Label" alignment="CENTER_RIGHT" prefWidth="300.0" text="Jugador 1">
                <font>
                   <Font size="24.0" />
                </font>
@@ -20,12 +20,21 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <Label fx:id="rivalLabel" prefWidth="300.0" text="Esperando rival">
+            <Label fx:id="jugador1Label" prefWidth="300.0" text="Jugador 2">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
          </children>
       </HBox>
+      <VBox alignment="CENTER" layoutX="430.0" layoutY="126.0" prefHeight="248.0" prefWidth="340.0">
+         <children>
+            <Label fx:id="numeroInicio">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="64.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
